# xiaolong-upload

./: .gitignore  .mcp.json  CLAUDE.md  DEPLOY.md  README.md  SOP.md  STRUCTURE.md  deploy.ps1  pyproject.toml  requirements.txt  run_upload.py  upload.py  upload_all.py  xhs_upload_log.txt
.codex_tmp/: openclaw_memory_import_requirements.json
common/: __init__.py  browser.py  conf.py  console.py  log.py  loggers.py  platform_auth.py  python_runtime.py  skill_runtime.py  utils.py
docs/: LOGIN_FLOW.md  PUBLISH_REQUIREMENTS.md
flash_longxia/: README.md  token.txt
scripts/: batch_upload_all.py  clean_cache.sh  cleanup_uploaded_videos.py  convert_cookie_header_to_json.py  cookie_path_utils.ps1  create_cdp_tab.py  export_cookie_cdp_raw.py  export_cookie_from_connect.py  export_douyin_cookie.ps1  export_kuaishou_cookie.ps1  export_shipinhao_cookie.ps1  export_xiaohongshu_cookie.ps1  import_cookie_and_upload.ps1  import_cookie_to_connect.py  migrate_cookies.sh  notify_login_qr.py  open_chrome_douyin_connect_mac.sh  open_chrome_for_upload.ps1  open_chrome_for_upload.sh  open_chrome_kuaishou_connect_mac.sh  open_chrome_shipinhao_connect_mac.sh  open_chrome_xiaohongshu_connect_mac.sh  platform_login.py  run_upload.bat  run_upload_mac.command  save_douyin_cookie.py  save_kuaishou_cookie.py  upload_all_platforms.py  upload_desktop.py  upload_douyin_connect.ps1  upload_kuaishou_connect.ps1  upload_shipinhao_connect.ps1  upload_xhs_ks_sph_generated.py  upload_xiaohongshu_connect.ps1
skills/: README.md  runtime_config.json
skills/auth/: SKILL.md  login_check_config.json
(+21 files in other folders)
